--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -23,6 +23,7 @@
         app:arc_reverseAngle="false"
         >
         <com.ssdev.saeedsina.lostfound.MyViews.MyButton
+            android:id="@+id/btn_ilost"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:gravity="center"
@@ -32,6 +33,7 @@
             app:arc_origin="center"
             />
         <com.ssdev.saeedsina.lostfound.MyViews.MyButton
+            android:id="@+id/btn_ifound"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:gravity="center"
@@ -41,6 +43,7 @@
             app:arc_origin="center"
             />
         <com.ssdev.saeedsina.lostfound.MyViews.MyButton
+            android:id="@+id/btn_adlist"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:gravity="center"
@@ -50,6 +53,7 @@
             app:arc_origin="center"
             />
         <com.ssdev.saeedsina.lostfound.MyViews.MyButton
+            android:id="@+id/btn_myaccount"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:gravity="center"
@@ -59,6 +63,7 @@
             app:arc_origin="center"
             />
         <com.ssdev.saeedsina.lostfound.MyViews.MyButton
+            android:id="@+id/btn_support"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:gravity="center"
