--- a/app/src/main/res/drawable/light_blue_oval.xml
+++ b/app/src/main/res/drawable/light_blue_oval.xml
@@ -3,4 +3,8 @@
     android:shape="oval"
     >
     <solid android:color="@color/blue"/>
+    <corners android:bottomRightRadius="7dp"
+        android:bottomLeftRadius="7dp"
+        android:topLeftRadius="7dp"
+        android:topRightRadius="7dp"/>
 </shape>
