--- a/app/src/main/res/drawable/light_blue_oval_pressed.xml
+++ b/app/src/main/res/drawable/light_blue_oval_pressed.xml
@@ -4,6 +4,10 @@
     <item>
         <shape android:shape="oval">
             <solid android:color="@color/pressed"/>
+            <corners android:bottomRightRadius="7dp"
+                android:bottomLeftRadius="7dp"
+                android:topLeftRadius="7dp"
+                android:topRightRadius="7dp"/>
         </shape>
     </item>
 </layer-list>
